--- a/css/news.css
+++ b/css/news.css
@@ -121,39 +121,83 @@ header .sp_navi_li li a {
     display: none;
   }
 }
-#cover_area h1 {
-  font-size:40px;
-    text-align: center;
-  color: #fff;
-  padding: 80px 0;
-}
+
+
+@media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx)
+{
 #cover_area {
-  text-align: center;
-  padding: 80px 0;
-  background-image: url("../images/news/sub_cover.jpg");
-  background-size: cover;
+    background-image: url(../images/news/sub_cover@2x.jpg);
+    padding: 40px 0;
+    background-size: cover;
 }
-@media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
-  #cover_area {
-    background-image: url("../images/news/sub_cover@2x.jpg");
-  }
-}
-@media (min-width: 550px) {
-  #cover_area {
-    text-align: left;
-    height: 200px;
-    padding: 0;
-  }
-  #cover_area img {
-    margin-top: 180px;
-    margin-left: 70px;
-  }
 }
 
+#cover_area {
+    padding: 40px 0;
+    background-size: cover;
+    background-image: url(../images/news/sub_cover.jpg);
+}
+#cover_area h1 {
+    text-align: center;
+    color: white;
+    font-size: 1.6rem;
+    font-weight: bold;
+    margin: 0;
+    letter-spacing: 0.2rem;
+}
+.columns {
+    width: 100%;
+    float: left;
+    box-sizing: border-box;
+}
+@media (min-width: 550px) {
+#cover_area {
+    padding: 80px 0;
+}
+}
+@media (min-width: 550px) {
+
+.twelve.columns {
+    width: 100%;
+    margin-left: 0;
+}
+}
+@media (min-width: 550px) {
+#cover_area h1 {
+    text-align: center;
+    color: white;
+    
+    font-size: 3.2rem;
+    font-weight: bold;
+    margin: 0;
+    letter-spacing: 0.2rem;
+}
+}
 
 
 #news_area {
-  background-color: #fff;
+  padding-top: 20px;
+}
+.container {
+    position: relative;
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 0 20px;
+    box-sizing: border-box;
+}
+.column, .columns {
+    width: 100%;
+    float: left;
+    box-sizing: border-box;
+}
+#news_area #main h2 {
+    color: #42b9d0;
+    border-bottom: 3px solid #42b9d0;
+    font-size: 15px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding-bottom: 15px;
 }
 @media (min-width: 550px) {
   #news_area {
@@ -176,14 +220,7 @@ header .sp_navi_li li a {
   padding: 0;
 }
 }
-.container {
-    position: relative;
-   
-    max-width: 960px;
-    margin: 0 auto;
-    
-    box-sizing: border-box;
-}
+
 @media (min-width: 550px) {
 #news_area #main h2 {
     font-size: 20px;
@@ -299,7 +336,12 @@ font-size: 2rem;
 
 }
 
+@media (max-width: 550px) {
 
+#news_area #sidebar .pc_navi_li {
+    display: none;
+}
+}
 
 footer {
   background-color: #42b9d0;
@@ -315,6 +357,15 @@ footer {
     padding: 0 6%;
     margin: 0 auto;
   }
+  .u-max-full-width {
+    max-width: 100%;
+    box-sizing: border-box;
+}
+footer .foot_address {
+    
+    font-size: 1.6rem;
+    padding-top: 10px;
+}
   footer .foot_navi {
     margin-top: 20px;
   }
@@ -389,9 +440,5 @@ footer .copy {
   }
 }
 
-h1 {
-  margin: 0;
-  padding: 0;
-}
 
 /*# sourceMappingURL=sample.css.map */
