--- a/css/company.css
+++ b/css/company.css
@@ -121,47 +121,127 @@ header .sp_navi_li li a {
     display: none;
   }
 }
-#cover_area h1 {
-  font-size:40px;
-    text-align: center;
-  color: #fff;
-  padding: 80px 0;
-}
+
+
+@media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx)
+{
 #cover_area {
-  text-align: center;
-  padding: 80px 0;
-  background-image: url("../images/news/sub_cover.jpg");
-  background-size: cover;
+    background-image: url(../images/news/sub_cover@2x.jpg);
+    padding: 40px 0;
+    background-size: cover;
 }
-@media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
-  #cover_area {
-    background-image: url("../images/news/sub_cover@2x.jpg");
-  }
+}
+
+#cover_area {
+    padding: 40px 0;
+    background-size: cover;
+    background-image: url(../images/news/sub_cover.jpg);
+}
+#cover_area h1 {
+    text-align: center;
+    color: white;
+    font-size: 1.6rem;
+    font-weight: bold;
+    margin: 0;
+    letter-spacing: 0.2rem;
+}
+.columns {
+    width: 100%;
+    float: left;
+    box-sizing: border-box;
 }
 @media (min-width: 550px) {
-  #cover_area {
-    text-align: left;
-    height: 200px;
-    padding: 0;
-  }
-  #cover_area img {
-    margin-top: 180px;
-    margin-left: 70px;
-  }
+#cover_area {
+    padding: 80px 0;
 }
+}
+@media (min-width: 550px) {
 
-
-
+.twelve.columns {
+    width: 100%;
+    margin-left: 0;
+}
+}
+@media (min-width: 550px) {
+#cover_area h1 {
+    text-align: center;
+    color: white;
+    
+    font-size: 3.2rem;
+    font-weight: bold;
+    margin: 0;
+    letter-spacing: 0.2rem;
+}
+}
 #news_area {
-  background-color: #fff;
+  padding-top: 20px;
+}
+.container {
+    position: relative;
+    max-width: 960px;
+    margin: 0 auto;
+    box-sizing: border-box;
+}
+.columns {
+    width: 100%;
+    float: left;
+    box-sizing: border-box;
+} 
+#contents #main .news_title {
+    margin-bottom: 0px;
+}
+.u-full-width {
+    width: 100%;
+    box-sizing: border-box;
 }
 
-@media (min-width: 550px) {
-  #news_area {
-    padding-top: 35px;
-    padding-bottom: 70px;
-  }
+table {
+    margin-bottom: 2.5rem;
+    border-collapse: collapse;
+    border-spacing: 0;
+    display: table;
+    border-color: grey;
 }
+tbody {
+    display: table-row-group;
+    vertical-align: middle;
+    border-color: inherit;
+}
+
+#news_area #main th {
+    padding-right: 20px;
+    color: #626262;
+    font-size: 1.4rem;
+}
+th {
+    text-align: left;
+    border-bottom: 1px solid #E1E1E1;
+    font-weight: bold;
+    display: table-cell;
+    vertical-align: inherit;
+}
+td {
+    padding: 20px 0;
+    color: #626262;
+    font-size: 1.4rem;
+    text-align: left;
+    border-bottom: 1px solid #E1E1E1;
+    display: table-cell;
+    vertical-align: inherit;
+}
+
+#news_area .news_title {
+font-size: 2rem;
+    padding-bottom: 20px;
+    line-height: 1.25;
+    letter-spacing: -.1rem;
+  letter-spacing: 0.2rem;
+  border-bottom: 3px solid #42b9d0;
+  margin-top: 0;
+    margin-bottom: 2rem;
+}
+
+
 
 @media (min-width: 550px) {
 
@@ -184,54 +264,9 @@ header .sp_navi_li li a {
     width: 74.0%;
 }
 }
-.container {
-    position: relative;
-    max-width: 960px;
-    margin: 0 auto;
-    box-sizing: border-box;
-}
-.u-full-width {
-    width: 100%;
-    box-sizing: border-box;
-}
-table {
-    margin-bottom: 2.5rem;
-    border-collapse: collapse;
-    border-spacing: 0;
-    display: table;
-    border-color: grey;
-}
-tbody {
-    display: table-row-group;
-    vertical-align: middle;
-    border-color: inherit;
-}
-tr {
-    display: table-row;
-    vertical-align: inherit;
-    border-color: inherit;
-}
-#news_area #main th {
-    padding-right: 20px;
-    color: #626262;
-    font-size: 1.4rem;
-}
-th {
-    text-align: left;
-    border-bottom: 1px solid #E1E1E1;
-    font-weight: bold;
-    display: table-cell;
-    vertical-align: inherit;
-}
-td {
-    padding: 20px 0;
-    color: #626262;
-    font-size: 1.4rem;
-    text-align: left;
-    border-bottom: 1px solid #E1E1E1;
-    display: table-cell;
-    vertical-align: inherit;
-}
+
+
+
 #news_area #sidebar {
     padding-bottom: 20px;
 }
@@ -245,11 +280,7 @@ td {
     margin-left: 4%;
 }
 }
-.columns {
-   
-    float: left;
-    box-sizing: border-box;
-} 
+
 #container {
   width: 100%;
   float: left;
@@ -305,16 +336,7 @@ a {
     text-decoration: none;
     
 }
-#news_area .news_title {
-font-size: 2rem;
-    padding-bottom: 20px;
-    line-height: 1.25;
-    letter-spacing: -.1rem;
-  letter-spacing: 0.2rem;
-  border-bottom: 3px solid #42b9d0;
-  margin-top: 0;
-    margin-bottom: 2rem;
-}
+
 
 @media (min-width: 550px) {
   #news_area .news_title {
@@ -331,8 +353,12 @@ font-size: 2rem;
 
 
 }
+@media (max-width: 550px) {
 
-
+#news_area #sidebar .pc_navi_li {
+    display: none;
+}
+}
 footer {
   background-color: #42b9d0;
   color: #fff;
@@ -347,6 +373,15 @@ footer {
     padding: 0 6%;
     margin: 0 auto;
   }
+  .u-max-full-width {
+    max-width: 100%;
+    box-sizing: border-box;
+}
+footer .foot_address {
+    
+    font-size: 1.6rem;
+    padding-top: 10px;
+}
   footer .foot_navi {
     margin-top: 20px;
   }
@@ -421,9 +456,6 @@ footer .copy {
   }
 }
 
-h1 {
-  margin: 0;
-  padding: 0;
-}
+
 
 /*# sourceMappingURL=sample.css.map */
