--- a/css/sample.css
+++ b/css/sample.css
@@ -154,6 +154,29 @@ header .sp_navi_li li a {
 #service_area {
   padding-top: 20px;
 }
+@media (min-width: 400px) {
+
+.container {
+    width: 85%;
+    padding: 0;
+}
+}
+.container {
+    position: relative;
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 0 20px;
+    box-sizing: border-box;
+}
+.u-max-full-width {
+    max-width: 100%;
+    box-sizing: border-box;
+}
+
+img {
+    border: 0;
+}
 @media (min-width: 551px) {
   #service_area {
     padding-top: 30px;
@@ -186,6 +209,25 @@ header .sp_navi_li li a {
 
 #news_area {
   background-color: #eaf2f4;
+}
+@media (min-width: 400px) {
+.container {
+    width: 85%;
+    padding: 0;
+}
+}
+.container {
+    position: relative;
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 0 20px;
+    box-sizing: border-box;
+}
+.column, .columns {
+    width: 100%;
+    float: left;
+    box-sizing: border-box;
 }
 @media (min-width: 551px) {
   #news_area .container {
@@ -246,6 +288,15 @@ footer {
     padding: 0 6%;
     margin: 0 auto;
   }
+  .u-max-full-width {
+    max-width: 100%;
+    box-sizing: border-box;
+}
+footer .foot_address {
+    
+    font-size: 1.6rem;
+    padding-top: 10px;
+}
   footer .foot_navi {
     margin-top: 20px;
   }
@@ -276,7 +327,7 @@ footer .copy {
   font-size: 1.1rem;
   color: #b2e1ea;
 }
-@media (min-width: 551px) {
+@media (min-width: 550px) {
   footer {
     padding-top: 30px;
   }
@@ -301,12 +352,12 @@ footer .copy {
     background-size: 4px 6px;
   }
 }
-@media screen and (min-width: 551px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 551px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 550px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 550px) and (min-resolution: 2dppx) {
   footer .foot_navi li {
     background-image: url("../images/top/foot_arroehead@2x.png");
   }
 }
-@media (min-width: 551px) {
+@media (min-width: 550px) {
   footer .foot_navi a {
     color: white;
     padding-left: 10px;
@@ -320,7 +371,3 @@ footer .copy {
   }
 }
 
-
-#googlemap_area {
-  width: 1000px;
-}
