--- a/css/company.css
+++ b/css/company.css
@@ -187,7 +187,7 @@ header .sp_navi_li li a {
     float: left;
     box-sizing: border-box;
 } 
-#contents #main .news_title {
+#news_area #main .news_title {
     margin-bottom: 0px;
 }
 .u-full-width {
@@ -229,11 +229,7 @@ td {
     display: table-cell;
     vertical-align: inherit;
 }
-tr {
-    display: table-row;
-    vertical-align: inherit;
-    border-color: inherit;
-}
+
 #news_area .news_title {
 font-size: 2rem;
     padding-bottom: 20px;
@@ -244,7 +240,11 @@ font-size: 2rem;
   margin-top: 0;
     margin-bottom: 2rem;
 }
-
+tr {
+    display: table-row;
+    vertical-align: inherit;
+    border-color: inherit;
+}
 
 
 @media (min-width: 550px) {
@@ -300,6 +300,7 @@ font-size: 2rem;
 #news_area #sidebar {
     padding-bottom: 20px;
 }
+
  h2 {
     color: #42b9d0;
     font-size: 14px;
@@ -362,6 +363,16 @@ a {
 #news_area #sidebar .pc_navi_li {
     display: none;
 }
+}
+@media (max-width: 550px) {
+
+#news_area #sidebar h2 {
+    display: none;
+}
+}
+.fb_iframe_widget {
+    display: inline-block;
+    position: relative;
 }
 footer {
   background-color: #42b9d0;
