--- a/css/news.css
+++ b/css/news.css
@@ -228,7 +228,7 @@ header .sp_navi_li li a {
     padding-bottom: 20px;
 }
 }
-#contents #main h2 {
+#news_area #main h2 {
     color: #42b9d0;
     border-bottom: 3px solid #42b9d0;
     font-weight: bold;
@@ -332,6 +332,10 @@ font-size: 2rem;
 
 
 }
+.fb_iframe_widget {
+    display: inline-block;
+    position: relative;
+}
 
 @media (max-width: 550px) {
 
@@ -339,6 +343,13 @@ font-size: 2rem;
     display: none;
 }
 }
+@media (max-width: 550px) {
+
+#news_area #sidebar h2 {
+    display: none;
+}
+}
+
 
 footer {
   background-color: #42b9d0;
@@ -440,5 +451,3 @@ footer .copy {
 
 
 /*# sourceMappingURL=sample.css.map */
-
-
